--- a/docs/docs-ref-autogen/excel/excel/excel.worksheet.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.worksheet.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.Worksheet#activate:member(1)'
@@ -110,7 +110,7 @@ items:
           ```
   - uid: 'excel!Excel.Worksheet#autoFilter:member'
     summary: |-
-      表示工作表的 AutoFilter 对象。 只读。
+      表示工作表的 AutoFilter 对象。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoFilter
@@ -162,7 +162,7 @@ items:
             - boolean
   - uid: 'excel!Excel.Worksheet#charts:member'
     summary: |-
-      返回作为工作表的一部分的图表的集合。 只读。
+      返回作为工作表的一部分的图表的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: charts
@@ -177,7 +177,7 @@ items:
           - 'excel!Excel.ChartCollection:class'
   - uid: 'excel!Excel.Worksheet#comments:member'
     summary: |-
-      返回工作表上的所有 Comments 对象的集合。 只读。
+      返回工作表上的所有 Comments 对象的集合。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comments
@@ -274,7 +274,7 @@ items:
             - 'excel!Excel.Worksheet:class'
   - uid: 'excel!Excel.Worksheet#customProperties:member'
     summary: |-
-      返回工作表级自定义属性的集合。
+      获取工作表级自定义属性的集合。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -323,7 +323,7 @@ items:
           ```
   - uid: 'excel!Excel.Worksheet#enableCalculation:member'
     summary: |-
-      获取或设置工作表的 enableCalculation 属性。 如此如果 Excel 根据需要重新计算工作表。 如果 Excel 不重新计算工作表，则该值为 False。
+      确定 Excel 是否应根据需要重新计算工作表。 如此如果 Excel 根据需要重新计算工作表。 如果 Excel 不重新计算工作表，则该值为 False。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: enableCalculation
@@ -410,7 +410,7 @@ items:
             - 'excel!Excel.WorksheetSearchCriteria:interface'
   - uid: 'excel!Excel.Worksheet#freezePanes:member'
     summary: |-
-      获取一个对象，该对象可用于操作工作表上的冻结窗格。 只读。
+      获取一个对象，该对象可用于操作工作表上的冻结窗格。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: freezePanes
@@ -818,7 +818,7 @@ items:
           - 'excel!Excel.PageBreakCollection:class'
   - uid: 'excel!Excel.Worksheet#id:member'
     summary: |-
-      返回用于唯一标识指定工作簿中工作表的值。即使工作表被重命名或移动，标识符的值仍然相同。只读。
+      返回用于唯一标识指定工作簿中工作表的值。 即使工作表被重命名或移动，标识符的值仍然相同。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -930,7 +930,7 @@ items:
           - string
   - uid: 'excel!Excel.Worksheet#names:member'
     summary: |-
-      一组范围限定到当前工作表的名称。 只读。
+      一组范围限定到当前工作表的名称。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: names
@@ -1147,8 +1147,7 @@ items:
     summary: |-
       在特定工作表上的一个或多个行的隐藏状态更改时发生。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: onRowHiddenChanged
     fullName: onRowHiddenChanged
     langs:
@@ -1308,7 +1307,7 @@ items:
           - 'excel!Excel.PageLayout:class'
   - uid: 'excel!Excel.Worksheet#pivotTables:member'
     summary: |-
-      一组属于 worksheet 的 PivotTable 对象。 只读。
+      一组属于工作表的数据透视表对象。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pivotTables
@@ -1357,7 +1356,7 @@ items:
           ```
   - uid: 'excel!Excel.Worksheet#protection:member'
     summary: |-
-      返回表工作表的工作表保护对象。 只读。
+      返回表工作表的工作表保护对象。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
@@ -1461,7 +1460,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.Worksheet#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -1482,7 +1481,7 @@ items:
             - 'excel!Excel.Worksheet:class'
   - uid: 'excel!Excel.Worksheet#shapes:member'
     summary: |-
-      返回工作表上的所有 Shape 对象的集合。 只读。
+      返回工作表上的所有 Shape 对象的集合。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shapes
@@ -1497,7 +1496,7 @@ items:
           - 'excel!Excel.ShapeCollection:class'
   - uid: 'excel!Excel.Worksheet#showGridlines:member'
     summary: |-
-      获取或设置工作表的网格线标志。 此标志确定是否对用户显示网格线。
+      指定是否对用户显示网格线。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showGridlines
@@ -1526,7 +1525,7 @@ items:
           ```
   - uid: 'excel!Excel.Worksheet#showHeadings:member'
     summary: |-
-      获取或设置工作表的标题标志。 此标志确定是否对用户显示标题。
+      指定标题是否对用户可见。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showHeadings
@@ -1590,7 +1589,7 @@ items:
             - number
   - uid: 'excel!Excel.Worksheet#slicers:member'
     summary: |-
-      返回作为工作表一部分的切片器的集合。 只读。
+      返回作为工作表一部分的切片器的集合。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: slicers
@@ -1622,7 +1621,7 @@ items:
           ```
   - uid: 'excel!Excel.Worksheet#standardHeight:member'
     summary: |-
-      返回工作表中所有行的标准（默认）行高，以磅为单位。 只读。
+      返回工作表中所有行的标准（默认）行高，以磅为单位。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: standardHeight
@@ -1637,7 +1636,7 @@ items:
           - number
   - uid: 'excel!Excel.Worksheet#standardWidth:member'
     summary: |-
-      返回或设置工作表中所有列的标准（默认）列宽。 一个列宽单位等于“常规”样式中一个字符的宽度。 对于比例字体，则使用字符 0（零）的宽度。
+      指定工作表中所有列的标准（默认）宽度。 一个列宽单位等于“常规”样式中一个字符的宽度。 对于比例字体，则使用字符 0（零）的宽度。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: standardWidth
@@ -1652,7 +1651,7 @@ items:
           - number
   - uid: 'excel!Excel.Worksheet#tabColor:member'
     summary: |-
-      获取或设置工作表标签颜色。 检索选项卡颜色时，如果工作表不可见，则值将为 null。 如果工作表可见但选项卡颜色设置为自动，将返回一个空字符串。 否则，在设置颜色时，属性将设置为颜色，格式为\#"123456"，则使用空字符串设置 "自动" 颜色，或使用实际颜色。
+      工作表的选项卡颜色。 检索选项卡颜色时，如果工作表不可见，则值将为 null。 如果工作表可见但选项卡颜色设置为自动，将返回一个空字符串。 否则，在设置颜色时，属性将设置为颜色，格式为\#"123456"，则使用空字符串设置 "自动" 颜色，或使用实际颜色。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tabColor
@@ -1681,7 +1680,7 @@ items:
           ```
   - uid: 'excel!Excel.Worksheet#tables:member'
     summary: |-
-      属于工作表的表的集合。 只读。
+      属于工作表的表的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tables
@@ -1738,7 +1737,7 @@ items:
         type:
           - 'excel!Excel.Worksheet#visibility~0:complex'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.AutoFilter:class'
     name: Excel.AutoFilter
@@ -1772,7 +1771,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetActivatedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetActivatedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -1786,7 +1785,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetCalculatedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetCalculatedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -1800,7 +1799,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -1814,7 +1813,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetColumnSortedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetColumnSortedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -1828,7 +1827,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetDeactivatedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetDeactivatedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -1842,7 +1841,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetFilteredEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetFilteredEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -1856,7 +1855,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetFormatChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetFormatChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -1870,7 +1869,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetRowHiddenChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetRowHiddenChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -1884,7 +1883,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetRowSortedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetRowSortedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -1898,7 +1897,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetSelectionChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetSelectionChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -1912,7 +1911,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetSingleClickedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetSingleClickedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -1932,7 +1931,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -1941,7 +1940,7 @@ references:
     name: Excel.ReplaceCriteria
   - uid: 'excel!Excel.Interfaces.WorksheetUpdateData:interface'
     name: Interfaces.WorksheetUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.ShapeCollection:class'
     name: Excel.ShapeCollection
